Give login-failure feedback via an in-form message, not console.log().

--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,9 @@
   padding: 10px;
   font-size: 18px; 
 }
+.errorMessage {
+  display: none;
+}
 
 /*****************LIBRARIAN BRANCHES LIST********************/
 
