--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ html, body {
   font-family: "Roboto", sans-serif;
 }
 
-button {
+button, .buttonLink {
   background: #0d1831;
   border: 1px solid #0d1831;
   border-radius: 3px;
@@ -16,7 +16,7 @@ button {
   font-size: 15px;
   cursor: pointer;
 }
-button:hover {
+button:hover, .buttonLink:hover {
   background: #1c3266;
 }
 
