--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@
 }
 
 .admin {
-  padding: 10px 0px;
+  padding: 10px 0;
 }
 .admin button {
   background: purple;
@@ -75,7 +75,7 @@
 }
 
 .librarian {
-  padding: 10px 0px;
+  padding: 10px 0;
 }
 .librarian button {
   background: orange;
@@ -87,7 +87,7 @@
 }
 
 .borrower {
-  padding: 10px 0px;
+  padding: 10px 0;
 }
 .borrower button {
   background: salmon;
@@ -102,7 +102,7 @@
 
 .login_main {
   width: 50%;
-  margin: 150px auto 0px auto;
+  margin: 150px auto 0 auto;
 }
 
 .login_form {
@@ -112,10 +112,10 @@
   font-size: 40px;
 }
 .login_form input {
-  margin: 5px 0px;
+  margin: 5px 0;
 }
 .login_form button {
-  margin: 5px 0px;
+  margin: 5px 0;
   width: 100%;
   padding: 10px;
   font-size: 18px; 
@@ -128,7 +128,7 @@
 
 .table_container {
   width: 85%;
-  margin: 125px auto 0px auto;
+  margin: 125px auto 0 auto;
 }
 
 .table_container h2 {
@@ -159,7 +159,7 @@
 }
 
 .submit_bttns {
-  margin: 40px 0px;
+  margin: 40px 0;
   width: 100%;
   text-align: center;
 }
@@ -179,7 +179,7 @@
 
 .editBranchForm {
   width: 85%;
-  margin: 125px auto 0px auto;
+  margin: 125px auto 0 auto;
 }
 
 .editBranchForm form {
@@ -202,7 +202,7 @@
 }
 
 .borrowerCheckout, .borrowerReturn {
-  margin: 40px 0px;
+  margin: 40px 0;
 }
 
 .borrowerCheckout button, .borrowerReturn button {
@@ -231,7 +231,7 @@
 
 .selectBranch_main {
   width: 50%;
-  margin: 150px auto 0px auto;
+  margin: 150px auto 0 auto;
 }
 
 /***********************ADMIN DASH*************************/
@@ -263,7 +263,7 @@
 
 .adminDashGreeting_right {
   flex-grow: 1;
-  margin: 50px 0px 0px 155px;
+  margin: 50px 0 0 155px;
   text-align: center;
   font-size: 30px;
   font-weight: bold;
@@ -272,7 +272,7 @@
 /*for the more generic tables*/
 .adminDash_right {
   flex-grow: 1;
-  margin: 50px 0px 0px 155px;
+  margin: 50px 0 0 155px;
 }
 
 /*****************ADMIN ALL BOOKS********************/
